# 20260420pyextreme

./: .version.txt  apod_async.py  apod_downloads_async.py  babyname.py  card.py  carddeck.py  deco_timestamp.py  decorator_syntax.py  durnders.py  f_string_shortcut.py  list_comps_and_gen_expr.py  mycommands.py  point.py  tuple_examples.py  unpacking_function_args.py
ANSWERS/: clear_list.py  count_all_lines.py  deco_timer.py  demystify.py  fetch_xkcd_requests.py  fetch_xkcd_urllib.py  noaa_precip.py  pres_by_dob.py  pres_by_state_func.py  pres_by_state_pandas.py  pres_log_main.py  president_log.py  presidentdc.py  presidents_factory.py  presidents_to_xml.py  pypuzzle.py  send_chimp.py  sum_of_values.py  using_paramiko.py  wiki_links_requests.py  wiki_links_urllib.py
DATA/: presidents.xlsx  presidents.xml  presidents_bad.xml
EXAMPLES/: abstract_base_classes.py  apple.py  attributes.py  binary_structs.py  binary_vs_text.py  bitwise_ops.py  bm_all_sequence_types.py  bm_augmented_add.py  bm_list_comp_vs_append.py  bm_listcmp_vs_genexpr.py  bm_merge_dicts.py  bm_set_vs_listcomp.py  builder_pattern.py  classes_carddeck.html  combinations_permutations.py  command_pattern.py  context_closing.py  context_manager_class_example.py  contextmanager_example.py  creating_classes.py  custom_sort_keys.py  dc_alternatives.py  dc_basic.py  dc_carddeck.py  dc_class_vars.py  dc_default_values.py  dc_from_fields.py  dc_knight.py  (+102 more)
EXAMPLES/temperature_scripts/: pyproject.toml
EXAMPLES/temperature_scripts/src/: temperature.py
weasels/: README.md  pyproject.toml
weasels/docs/source/: conf.py  index.rst
weasels/src/: weasels.py
weasels/tests/: test_weasels.py
(+48 files in other folders)
